added content and styles

--- a/index.html
+++ b/index.html
@@ -1,27 +1,67 @@
 <!doctype html>
 <html class="no-js" lang="">
-    <head>
-        <meta charset="utf-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-        <title></title>
-        <meta name="description" content="">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
+  <head>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+    <title></title>
+    <meta name="description" content="">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.3/css/font-awesome.min.css">
+    <link rel="stylesheet" href="css/normalize.min.css">
+    <link rel="stylesheet" href="css/main.css">
+    <!--[if lt IE 9]>
+<script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
+<script>window.html5 || document.write('<script src="js/vendor/html5shiv.js"><\/script>')</script>
+<![endif]-->
+  </head>
+  <body>
+    <div class="hero">
+      <a class="title" href="#content">
+        <p>plush</p>
+        <i class="fa fa-angle-down" aria-hidden="true"></i>
+      </a>
+    </div>
+    <div id="content" class="darkmode">
+      <!--<div class="warning">
+          <p>Plush is a frightening story for children and is rated PG.</p>
+          <a href="http://www.scaryforkids.com/plush-lion/" target="_blank">via scaryforkids.com</a>
+          <i class="dismiss fa fa-times-circle" aria-hidden="true"></i>
+      </div>-->
+      <div class="controls">
+        <div class="color">
+          <button class="light">A</button>
+          <button class="dark">A</button>
+          <button class="sepia">A</button>
+        </div>
+      </div>
+      <div class="story container">
+        <h1>plush</h1>
+        <p>A young girl was about to turn 6 years old and her parents asked her what she would like for her birthday. She told them she wanted a lion. A few days later, when she opened her birthday presents, she found a brown and yellow stuffed lion with soft, plush fur. It had a friendly smile on its face and long white whiskers. </p>
+        <p>The girl was delighted and, for the rest of the evening, she and her plush lion toy could not be separated. That night, when she went to bed, she placed the lion beside her pillow. As her mother was tucking her in, the girl said, &#8220;The lion will guard me while I sleep.&#8221;</p>
+        <p>The next morning, the she took the plush lion to school with her. The girl&#8217;s parents had packed a lunch for her, so at break time, she sat in the school yard and ate her food. She even tried to feed some of her porridge to the plush lion, but it only dried on his face and made his smile seem like a frown. </p>
+        <p>The little girl decided that lions like to eat meat, so when she got home from school, she searched the refrigerator for something she could feed to her stuffed animal. She found a cooked pork chop and placed it on a plate in front of the lion. </p>
+        <p>She sat and waited, but the plush lion did not eat the pork chop. Growing bored, she went into the living room to watch TV. An hour later, she returned to the kitchen and found the lion sitting in front of an empty plate. </p>
+        <p>The girl was shocked for a second, but then she looked around and saw her pet cat in the corner of the kitchen, gnawing on the pork chop. When she picked up the lion, it seemed to be thinner and lighter. She even imagined she could see its bones sticking through its soft fur.</p>
+        <p>The little girl was worried that her lion was getting too thin. She decided that she would have to feed him raw meat, because she had heard that was what animals eat in the jungle. She took a big red beef steak out of the fridge and placed it in front of her beloved toy.</p>
+        <p>She left the lion sitting beside the big steak and went upstairs to her bedroom to play. Soon, she had forgotten all about the lion and when her parents came home that night, they found bloodstains on the kitchen floor. The mother was worried and yelled for her daughter. Then, when she saw the cat sitting in the corner, chewing on something, she calmed down.</p>
+        <p>When the little girl came into the kitchen, her mother demanded to know why she was feeding a good steak to the cat. The little girl looked at the lion. His face was clean, but the tips of his whiskers were red with blood. When she picked the lion up and carried him upstairs to her bedroom, he seemed a little heavier. </p>
+        <p>The next day, the girl&#8217;s parents took her to visit their relatives. When they returned to their house that evening, the cat was not there to greet them. The parents searched the kitchen and the backyard, while the girl went upstairs. Opening her bedroom door, she walked in and found a horrible scene. </p>
+        <p>Her pet cat was lying on the floor in a pool of blood. It had been partially devoured and all that was left were its hind legs and tail. She began screaming and her parents rushed upstairs. They couldn&#8217;t understand what had happened. it seemed as if some animal had gotten into the house and attacked the cat.</p>
+        <p>The girl spent the next few days weeping and crying, devastated by the loss of her pet cat. Her parents decided to cheer her up and brought her out to the local mall. They bought her some new toys to take her mind off things.</p>
+        <p>When they returned home, the girl spent the rest of the evening playing with her new toys and forgot about the plush lion. That night, her father tried to pick up the lion and put it in the bedroom closet, but it was so heavy he could barely lift it. </p>
+        <p>A week later, the young girl was home alone again. Her parents were at work and she was at the kitchen table, reading a book. As she was turning one of the pages, she thought she heard a rustling sound coming from upstairs. She did not pay any attention to it. Then, a few minutes, later, she thought she heard soft footsteps on the stairs. She dismissed it, telling herself it was just her imagination. </p>
+        <p>Not long after that, she heard the kitchen door creak. Looking over her shoulder, she found herself face to face with her huge stuffed lion. </p>
+        <p>Later that evening, the girl&#8217;s parents came home from work. The house was filled with an eerie silence. They called out their daughter&#8217;s name, but nobody answered. On the stairs, they saw streaks of blood leading up to their daughter&#8217;s bedroom. Suddenly, they heard a terrible roar coming from upstairs. </p>
+        <p>Even though he was afraid, the father ran up the stairs and threw open the door of his daughter&#8217;s bedroom. He gasped. The entire room, floor, ceiling and walls, were spattered with blood. His wife came running up the stairs and burst into the room. On the bed lay the remains of their beloved daughter. She had been torn apart and most of her insides had been eaten. Only her face remained untouched.</p>
+        <p>In the middle of the gnawed bones and chewed flesh, sat the plush lion. Its fur was soaked in blood. Its button eyes stared blankly at the horrified parents.</p>
+      </div>
+    </div>
+    <footer>
 
-        <link rel="stylesheet" href="css/normalize.min.css">
-        <link rel="stylesheet" href="css/main.css">
-
-        <!--[if lt IE 9]>
-            <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
-            <script>window.html5 || document.write('<script src="js/vendor/html5shiv.js"><\/script>')</script>
-        <![endif]-->
-    </head>
-    <body>
-
-        <p>Hello world! This is HTML5 Boilerplate.</p>
-
-        <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
-        <script>window.jQuery || document.write('<script src="js/vendor/jquery-1.11.2.min.js"><\/script>')</script>
-
-        <script src="js/main.js"></script>
-    </body>
+    </footer>
+    <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
+    <script>window.jQuery || document.write('<script src="js/vendor/jquery-1.11.2.min.js"><\/script>')</script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.11.4/jquery-ui.min.js"></script>
+    <script src="js/main.js"></script>
+  </body>
 </html>
