--- a/index.html
+++ b/index.html
@@ -3,11 +3,12 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-    <title></title>
+    <title>Plush | Horrifying story for children</title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.3/css/font-awesome.min.css">
     <link rel="stylesheet" href="css/normalize.min.css">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.3/css/font-awesome.min.css">
+    <link rel="stylesheet" href="css/animate.min.css">
     <link rel="stylesheet" href="css/main.css">
     <!--[if lt IE 9]>
 <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
@@ -16,7 +17,7 @@
   </head>
   <body>
     <div class="hero">
-      <a class="title" href="#content">
+      <a class="title animated fadeIn" href="#content">
         <p>plush</p>
         <i class="fa fa-angle-down" aria-hidden="true"></i>
       </a>
@@ -29,7 +30,7 @@
           <button class="sepia">A</button>
         </div>
       </div>
-      <div class="story container">
+      <div class="container">
         <h1>plush</h1>
         <div class="warning">
           <p>Plush is a frightening story for children and is rated PG.</p>
