--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-    <title>Plush | Horrifying story for children</title>
+    <title>plush | a children's story</title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="css/normalize.min.css">
@@ -20,6 +20,7 @@
     <div class="hero">
       <a class="title animated fadeInDown" href="#content">
         <p>plush</p>
+        <p class="subline">a children's story</p>
         <i class="fa fa-angle-down" aria-hidden="true"></i>
       </a>
     </div>
@@ -34,12 +35,6 @@
       </div>
       <div class="container">
         <h1>plush</h1>
-        <!--<div class="warning">
-          <p>Plush is a frightening story for children and is rated PG.</p>
-          <p>This story contains material that parents may find unsuitable for younger children. Many parents may want to read it with their younger children. The theme itself may call for parental guidance and/or the story may contain one or more of the following: graphic violence (V), and death (D).</p>
-          <a href="http://www.scaryforkids.com/plush-lion/" target="_blank">via scaryforkids.com</a>
-          <i class="dismiss fa fa-times-circle" aria-hidden="true"></i>
-        </div>-->
         <p>A young girl was about to turn 6 years old and her parents asked her what she would like for her birthday. She told them she wanted a lion. A few days later, when she opened her birthday presents, she found a brown and yellow stuffed lion with soft, plush fur. It had a friendly smile on its face and long white whiskers. </p>
         <p>The girl was delighted and, for the rest of the evening, she and her plush lion toy could not be separated. That night, when she went to bed, she placed the lion beside her pillow. As her mother was tucking her in, the girl said, &#8220;The lion will guard me while I sleep.&#8221;</p>
         <p>The next morning, the she took the plush lion to school with her. The girl&#8217;s parents had packed a lunch for her, so at break time, she sat in the school yard and ate her food. She even tried to feed some of her porridge to the plush lion, but it only dried on his face and made his smile seem like a frown. </p>
